# gnu_annual

./: .gitignore  ABOUT  AUTHORS  CMakeLists.txt  INSTALL  README
doc/: 2annual.pod  CMakeLists.txt  annual.pod
perl/: 2annual.pl.in  CMakeLists.txt  test.sh
perl/tests/: README  gmx.gmxa  gmx.ok  outlook.csv  outlook.ok  vcard.ok  vcard.vcf
src/: .card.cpp.swp  CMakeLists.txt  CMakeListsFiles.txt  aboutdialog.cpp  aboutdialog.h  anniv.cpp  anniv.h  annual.pro  annual.qrc  bootstrap.sh  card.cpp  card.h  cardinserter.cpp  cardinserter.h  config.h  config.h.in  dockwidget.cpp  dockwidget.h  ioexception.h  listdelegate.cpp  listdelegate.h  listmodel.cpp  listmodel.h  main.cpp  main_cli.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  tabledelegate.cpp  tabledelegate.h  tablemodel.cpp  tablemodel.h  tableview.cpp  tableview.h  tabwidget.cpp  tabwidget.h  translations.qrc  translations_cmake.qrc  undocommand.cpp  (+3 more)
src/icons/: README  about.xcf  document-print.xcf  holiday.xcf
src/translations/: annual_de_DE.ts  annual_en.ts  annual_en_US.ts
